Se termino elproyecto

--- a/css/Card.css
+++ b/css/Card.css
@@ -34,3 +34,37 @@
     transform: scale(1.05);
     transition: all .3s ease;
 }
+
+.card__loading-image{
+    position: absolute;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    justify-self: center;
+    height: 250px;
+    width: 100%;
+    background-color: rgb(60, 62, 68);
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.card__image-container{    
+    width: 100%;
+    position: relative;
+}
+.card__loading-image-icon{
+    animation-name: rotate;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes rotate{
+    from{
+        transform: rotateX(0);
+    }
+    to{
+        transform: rotateX(360deg);
+    }
+}
